# manifold

./: .gitignore  COMPLETION_PLAN.md  Cargo.toml  DOMAIN_OPTIMIZATION_PLAN_v0.1.1.md  FINALIZATION_PLAN.md  HYPERSPATIAL_EXAMPLES.md  HYPERSPATIAL_IMPLEMENTATION_PHASES.md  HYPERSPATIAL_REDESIGN.md  KNOWN_ISSUES.md  NEXT_SESSION.md  OPTIMIZATION_PLAN.md  README.md  TROUBLESHOOTING.md
.project/: DOMAIN_OPTIMIZATION_REVIEW.md  DOMAIN_VECTORS_COMPLETION.md  FINAL_FIX.md  ITERATOR_FIX.md  PHASE_6.1_COMPLETION_SUMMARY.md  PYTHON_BINDINGS_STATUS.md  RANGE_QUERIES_COMPLETE.md  WAL_FIX_NOTES.md  WRITE_COALESCING_FIX.md
.project/tasks/: write-coalescing-optimization.md
crates/manifold-bench/: BENCHMARK_RESULTS.md  Cargo.toml
crates/manifold-derive/: Cargo.toml
crates/manifold-graph/: Cargo.toml  README.md  rust_out
crates/manifold-graph/examples/: dependency_graph.rs  knowledge_graph.rs  knowledge_graph.rs.bak3  petgraph_integration.rs  social_network.rs
crates/manifold-graph/src/: edge.rs  graph.rs  integration.rs  lib.rs
crates/manifold-graph/tests/: integration_tests.rs
crates/manifold-properties/: Cargo.toml  DESIGN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROMPT.md
crates/manifold-properties/src/: encoding.rs  lib.rs  operations.rs  property_value.rs  table.rs  temporal.rs
crates/manifold-python/: Cargo.toml
crates/manifold-timeseries/: Cargo.toml  README.md
crates/manifold-timeseries/examples/: downsampling_lifecycle.rs  iot_sensors.rs  metrics_collection.rs
crates/manifold-timeseries/src/: aggregate.rs  downsampling.rs  encoding.rs  integration.rs  lib.rs  retention.rs  timeseries.rs
crates/manifold-vectors/: Cargo.toml  EXAMPLES_SUMMARY.md  INTEGRATION.md  README.md
crates/manifold-vectors/examples/: README.md  dense_semantic_search.rs  multi_vector_colbert.rs  rag_complete.rs  sparse_hybrid_search.rs
crates/manifold-vectors/src/: dense.rs  distance.rs  integration.rs  lib.rs  multi.rs  sparse.rs
crates/manifold-vectors/tests/: integration_tests.rs
docs/: COMPLETION_PLAN.md  DOMAIN_BENCHMARKS_SUMMARY.md  FINALIZATION_PLAN.md  column_family_performance.md  per_cf_storage_design.md  recovery_guarantees.md  wal_design.md  wal_pipelining_design.md
examples/: baseline_test.rs  bincode_keys.rs  column_families.rs  debug_parallelism.rs  error_handling.rs  fair_comparison.rs  int_keys.rs  isolate_bottleneck.rs  measure_expansions.rs  multithread.rs  original_redb_test.rs  profile_bottleneck.rs  redb_parallel_files.rs  redb_vs_columnfamily.rs  single_thread_comparison.rs  special_values.rs  test_concurrency.rs  test_concurrency_no_sync.rs  test_pooling_no_wal.rs  test_single_thread.rs  test_with_pooling.rs  trace_locks.rs  truly_no_wal.rs  wal_batch_test.rs  wal_comparison.rs  wal_concurrent_batched.rs  wal_concurrent_comparison.rs  wal_concurrent_test.rs  wal_improvement_test.rs  wal_smoke_test.rs
examples/wasm/: README.md  TESTING.md  index.html  worker.js
fuzz/fuzz_targets/: fuzz_redb.rs
src/: db.rs  lib.rs  table.rs  transactions.rs  wasm.rs
src/column_family/: builder.rs  database.rs  file_handle_pool.rs  header.rs  mod.rs  partitioned_backend.rs  state.rs  unlocked_backend.rs
src/tree_store/: mod.rs  table_tree.rs
tests/: backward_compatibility.rs  basic_tests.rs  column_family_tests.rs  complex_types_tests.rs  concurrent_access_error_tests.rs  crash_recovery_tests.rs  database_builder_tests.rs  error_tests.rs  graceful_shutdown_tests.rs  header_corruption_tests.rs  integration_tests.rs  legacy_tuple_types_tests.rs  memory_pressure_tests.rs  multimap_tests.rs  multithreading_tests.rs  storage_backend_error_tests.rs  table_operations_tests.rs  tuple_types_tests.rs  types_tests.rs  wal_advanced_tests.rs  wal_error_handling_tests.rs  wal_integration_test.rs
(+37 files in other folders)
