[package]
name = "manifold-python"
description = "Python bindings for manifold"
publish = false
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "manifold"
doc = false
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.24.1"

[dependencies]
pyo3 = { version = "0.24.1", features=["extension-module", "abi3-py37"] }
manifold = { path = "../..", package = "manifold-db" }

[dev-dependencies]
tempfile = "3.5.0"
