[package]
name = "manifold-timeseries"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Time-series storage optimizations for Manifold embedded database"
keywords = ["database", "timeseries", "metrics", "monitoring", "downsampling"]
categories = ["database-implementations", "data-structures"]

[dependencies]
manifold = { path = "../..", version = "3.1" }

[dev-dependencies]
tempfile = "3.5.0"
sysinfo = "0.37"

[lints.clippy]
big_endian_bytes = "deny"
dbg_macro = "deny"
host_endian_bytes = "deny"
